# clogo

./: CMakeLists.txt
include/clogo/: clogo.h  clogo_private.h  debug.h
src/: clogo.c  debug.c  main.c
